--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,15 +3,23 @@ owner: evintoh # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: BMS
+  - name: BMS SG
     url: https://sg.bookmyshow.com/
+  - name: BMS ID
+    url: https://id.bookmyshow.com/
+  - name: BMS MY
+    url: https://my.bookmyshow.com/
+  - name: BMS SG Pos
+    url: http://pos-sg.bigtix.io/
+  - name: BMS SG Admin
+    url: http://admin-sg.bigtix.io/
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   # cname: demo.upptime.js.org
   baseUrl: /upptime
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
+  logoUrl: https://raw.githubusercontent.com/evintoh/upptime/master/assets/bms_logo.svg
   name: BMSSEA
   introTitle: "BMSSEA Status"
   introMessage: This is a status page based on upptime
